# llbc

./: .gitignore  CMakeLists.txt  flake.nix
dev/: git-gamblec-commit.py  git-gamblec-customization.sh  git-gblc-commit.py  git-gblc-customization.sh
src/: lexer.h  main.cpp  token.h
src/ast/: all.h  ast-visitor.cpp  ast-visitor.h  ast.cpp  ast.h  dec.cpp  dec.h  default-visitor.cpp  default-visitor.h  exp.cpp  exp.h  fwd.h  main-visitor.cpp  main-visitor.h  print-ast.cpp  print-ast.h  stmt.cpp  stmt.h  type.cpp  type.h  visitor.h
src/bind/: binder.cpp  binder.h  scope.cpp  scope.h
src/gbir/: all.h  basic-block.cpp  basic-block.h  function.cpp  function.h  fwd.h  gbir-visitor.cpp  gbir-visitor.h  module.cpp  module.h  print-gbir.cpp  print-gbir.h  top-level.cpp  top-level.h  value.cpp  value.h  visitor.h
src/gbir-gen/: factory.cpp  factory.h  gbir-gen.cpp  gbir-gen.h
src/gbir-opti/: dead-block.cpp  dead-block.h  mem2reg.cpp  mem2reg.h
src/gbir/inst/: binop.cpp  binop.h  const.cpp  const.h  global.cpp  global.h  inst.h  mem.cpp  mem.h
src/parse/: factory.cpp  factory.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h  utils.cpp
src/type/: type-checker.cpp  type-checker.h
tests/: bind.sh  gbir.sh  reprint.sh  type.sh
tests/binder/errors/: assign_non_variable.gbl  assign_undefined.gbl
tests/binder/good/: assign.gbl
tests/gbir/good/: arithmetic.gbir  arithmetic.gbl  call.gbir  call.gbl  global_read.gbir  global_read.gbl  globals.gbir  globals.gbl  ifelse.gbir  ifelse.gbl  loopbreak.gbir  loopbreak.gbl  scene_precond.gbir  scene_precond.gbl
tests/lexer/: comment_empty.gbl  comment_end_of_file.gbl  comment_inline.gbl  error_multiple_errors.gbl  error_unknown_char.gbl  ident_keyword_prefix.gbl  ident_underscore.gbl  ident_vs_keyword.gbl  ident_with_numbers.gbl  keywords_all.gbl  mixed_complex_expression.gbl  mixed_nested_parens.gbl  mixed_no_spaces.gbl  newline_multiple.gbl  number_dollars.gbl  number_dollars_nospace.gbl  number_multiple_dollars.gbl  number_zero_dollars.gbl  op_arrow_vs_minus.gbl  op_eq_vs_eqeq.gbl  op_geq_vs_gt.gbl  op_leq_vs_lt.gbl  op_neq.gbl  string_escaped_quote.gbl  string_multiple_escapes.gbl  string_only_escape.gbl  string_with_newline_inside.gbl  whitespace_empty_lines.gbl  whitespace_multiple_spaces.gbl  whitespace_tabs.gbl
tests/lexer/errors/: bad_escape.gbl  chance_too_big.gbl  lone_amp.gbl  lone_exclaim.gbl  lone_pipe.gbl  multiple_errors.gbl  unknown_char.gbl  unterminated_float.gbl
tests/lexer/good/: chance.gbl  comments.gbl  dollars.gbl  floats.gbl  identifiers.gbl  integers.gbl  keywords.gbl  mixed.gbl  operators.gbl  scene_flow.gbl  streak.gbl  strings.gbl  symbols.gbl  whitespace.gbl
tests/parser/errors/: break_no_semicolon.gbl  call_arg_no_comma.gbl  call_no_rparen.gbl  enters_no_scene.gbl  enters_no_semicolon.gbl  expstmt_no_semicolon.gbl  funcdec_arg_bad_type.gbl  funcdec_arg_no_colon.gbl  funcdec_arg_no_comma.gbl  funcdec_arg_no_name.gbl  funcdec_arg_no_rparen.gbl  funcdec_bad_return_type.gbl  funcdec_no_lbrace.gbl  funcdec_no_lparen.gbl  funcdec_no_name.gbl  funcdec_no_rbrace.gbl  group_no_rparen.gbl  if_else_no_lbrace.gbl  if_else_no_rbrace.gbl  if_no_lbrace.gbl  if_no_rbrace.gbl  loop_no_lbrace.gbl  loop_no_rbrace.gbl  no_expression.gbl  playerdec_field_no_colon.gbl  playerdec_field_no_value.gbl  playerdec_field_twice.gbl  playerdec_no_comma.gbl  playerdec_no_lbrace.gbl  playerdec_no_name.gbl  playerdec_no_rbrace.gbl  playerdec_unknown_field.gbl  return_no_semicolon.gbl  return_no_value.gbl  scenedec_max_not_int.gbl  scenedec_no_lbrace.gbl  scenedec_no_name.gbl  scenedec_no_rbrace.gbl  start_no_scene.gbl  start_no_semicolon.gbl  (+3 more)
tests/parser/good/: arithmetic.gbl  assign.gbl  callexp.gbl  comparison.gbl  entersstmt.gbl  expstmt.gbl  funcdec.gbl  grouping.gbl  ifstmt.gbl  literals.gbl  logical.gbl  loopstmt.gbl  playerdec.gbl  precedence.gbl  returnstmt.gbl  scene_empty.gbl  scenedec.gbl  scenefull.gbl  startstmt.gbl  vardec.gbl
tests/type/errors/: arg_type_mismatch.gbl  assign_top_level.gbl  assign_type_mismatch.gbl  assign_void.gbl  bad_arith_operands.gbl  if_condition_not_bool.gbl  missing_return.gbl  precondition_not_bool.gbl  return_type_mismatch.gbl  return_value_in_void.gbl  too_few_args.gbl  too_many_args.gbl  var_type_mismatch.gbl
tests/type/good/: arithmetic.gbl  assign.gbl  control.gbl  declared_types.gbl  functions.gbl  scenes.gbl  void_call.gbl
